# RS485-Isolated-Repeater

./: .gitignore  README.md
Hardware/3D-Model/Assets/: pcb.pcb3d
Hardware/KiCad/RS485-insolated-repeater/: RS485-insolated-repeater.kicad_pcb  RS485-insolated-repeater.kicad_prl  RS485-insolated-repeater.kicad_pro  RS485-insolated-repeater.kicad_sch  fp-info-cache  fp-lib-table  microcontroller.kicad_sch  power-section.kicad_sch  rs485.kicad_sch  sym-lib-table
Hardware/KiCad/RS485-insolated-repeater/Gerber/: RS485-insolated-repeater-B_Cu.gbl  RS485-insolated-repeater-B_Mask.gbs  RS485-insolated-repeater-B_Paste.gbp  RS485-insolated-repeater-B_Silkscreen.gbo  RS485-insolated-repeater-Edge_Cuts.gm1  RS485-insolated-repeater-F_Cu.gtl  RS485-insolated-repeater-F_Mask.gts  RS485-insolated-repeater-F_Paste.gtp  RS485-insolated-repeater-F_Silkscreen.gto  RS485-insolated-repeater-NPTH-drl_map.gbr  RS485-insolated-repeater-NPTH.drl  RS485-insolated-repeater-PTH-drl_map.gbr  RS485-insolated-repeater-PTH.drl
Idea/: Iidea.md
Software/RS485-Isolated-Repeater/: CMakeLists.txt  main.cpp
Software/RS485-Isolated-Repeater/src/: CMakeLists.txt  definitions.hpp  gpio.cpp  gpio.hpp  interrupts.cpp  interrupts.hpp  rs485.cpp  rs485.hpp
